[package]
name = "expri"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tempfile = "3.27.0"
toml = "0.9.12"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
