[package]
name = "expri"
version = "0.1.1"
edition = "2024"
description = "Repo-local remote experiment workflow tools"
license = "MIT"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tempfile = "3.27.0"
toml = "0.9.12"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }
