[package]
name = "expri"
version = "0.1.2"
edition = "2024"
description = "Repo-local remote experiment workflow tools"
license = "MIT"
repository = "https://github.com/agentic-rs/expri"

[dependencies]
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
globset = "0.4.18"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
toml = "1.1.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
